Spell city correctly (it is Tucson -- 'c' is first).

--- a/_posts/2020-05-06-resume.markdown
+++ b/_posts/2020-05-06-resume.markdown
@@ -116,7 +116,7 @@ Amazon (speaker at invitation-only briefing) <span style="float:right;">New York
 
 Cycle Computing (speaker at invitation-only briefing) <span style="float:right;">New York, NY -- April 2016</span>
 
-High-Performance Computing User Forum (invited speaker) <span style="float:right;">Tuscon, AZ -- April 2016</span>
+High-Performance Computing User Forum (invited speaker) <span style="float:right;">Tucson, AZ -- April 2016</span>
 
 **Education**
 
